created contacts, feedback, links, and offerings pages and linked all to template, made catch phrase the link back to template page

--- a/site/offerings.html
+++ b/site/offerings.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div class="content"> <!--containes the page's content (for homepage is just an image)-->
-			<p align="center">this would be an image or content</p>
+			<p align="center">Offerings</p>
 		</div>
 
 		<div class="footer" align="center"> <!--contains the footer that will be constant on every page-->
