--- a/site/feedback.html
+++ b/site/feedback.html
@@ -15,7 +15,7 @@
 
 	<body>
 		<div class="header"> <!--contains the header that will be a constant on every page-->
-			<h1 class="verta" align="center"><a href="template.html">This is the Catch Phrase</a></h1>
+			<h1 class="verta" align="center"><a href="index.html">This is the Catch Phrase</a></h1>
 		</div>
 
 		<div class="nav" align="center">
