--- a/site/index.html
+++ b/site/index.html
@@ -14,9 +14,9 @@
 	</head>
 
 	<body>
-		<div class="header"> <!--contains the header that will be a constant on every page-->
-			<h1 class="verta" align="center"><a href="index.html">This is the Catch Phrase</a></h1>
-		</div>
+		<a href="index.html"><div class="header"> <!--contains the header that will be a constant on every page-->
+			<h1 class="verta" align="center">This is the Catch Phrase</h1>
+		</div></a>
 
 		<div class="nav" align="center">
 			<a href="offerings.html">Offerings</a>
@@ -34,7 +34,7 @@
 		</div>
 
 		<div class="footer" align="center"> <!--contains the footer that will be constant on every page-->
-			<p>This is the footer with some image links to social media 
+			<p>Fouronthree&copy;  
 				<a href="#"><img src="images/fbonwood_sized.png"></a> 
 				<a href="#"><img src="images/twitteronwood_sized.png"></a>
 			</p>
