added clickable email and phone number to contacts page and embedded google map with location centered

--- a/site/contacts.html
+++ b/site/contacts.html
@@ -31,6 +31,10 @@
 
 		<div class="content"> <!--containes the page's content (for homepage is just an image)-->
 			<p align="center">Contacts</p>
+			<p>Phone: <a href ="tel:+1-503-880-3551">(530) 880-3551</a></p>
+			<p>E-mail: <a href="mailto:fouronthree@gmail.com">fouronthree@gmail.com</a></p>
+			<p>Address: 1771 NW Pettygrove St. #140, Portland, OR 97209</p>
+			<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=1771+NW+Pettygrove+St.+%23140++Portland,+OR+97209&amp;aq=&amp;sll=37.269174,-119.306607&amp;sspn=9.822443,19.753418&amp;ie=UTF8&amp;hq=&amp;hnear=1771+NW+Pettygrove+St+%23140,+Portland,+Oregon+97209&amp;t=m&amp;ll=45.526555,-122.684155&amp;spn=0.021046,0.036478&amp;z=14&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=1771+NW+Pettygrove+St.+%23140++Portland,+OR+97209&amp;aq=&amp;sll=37.269174,-119.306607&amp;sspn=9.822443,19.753418&amp;ie=UTF8&amp;hq=&amp;hnear=1771+NW+Pettygrove+St+%23140,+Portland,+Oregon+97209&amp;t=m&amp;ll=45.526555,-122.684155&amp;spn=0.021046,0.036478&amp;z=14" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 		</div>
 
 		<div class="footer" align="center"> <!--contains the footer that will be constant on every page-->
