--- a/site/links.html
+++ b/site/links.html
@@ -11,6 +11,7 @@
 	  <!-- The "link" tag identifies your external CSS style sheet. Edit this link to use your particular file  -->
 	  <link rel="stylesheet" type="text/css" href="stylesheets/site.css" media="screen" />
 	  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen" />
+	  <link rel="icon" type="image/ico" href="favicon.ico" /> <!--links to favicon in root dir-->
 	</head>
 
 	<body>
@@ -31,6 +32,11 @@
 
 		<div class="content"> <!--containes the page's content (for homepage is just an image)-->
 			<p align="center">Links</p>
+			<ul>
+				<li><a href="http://en.wikipedia.org/wiki/Massage" target="_blank">Massage Information</a></li>
+				<li><a href="http://www.mayoclinic.com/health/massage/SA00082" target="_blank">Health Benefits of Massages</a></li>
+				<li><a href="http://www.massagetherapy.com/_content/images/Media/Factsheet1.pdf">Massage Therapy Fast Facts Brochure</a></li>
+			</ul>
 		</div>
 
 		<div class="footer" align="center"> <!--contains the footer that will be constant on every page-->
