--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,7 @@
 	  <!-- The "link" tag identifies your external CSS style sheet. Edit this link to use your particular file  -->
 	  <link rel="stylesheet" type="text/css" href="stylesheets/site.css" media="screen" />
 	  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen" />
+	  <link rel="icon" type="image/ico" href="favicon.ico" /> <!--links to favicon in root dir-->
 	</head>
 
 	<body>
